<resources>

    <string name="app_name">LOIC</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <color name="background">#000000</color>
    <color name="foreground">#222222</color>
    <color name="button">#326496</color>
    <color name="text">#FFFFFF</color>
    <color name="fire">#FF0000</color>
    <string-array name="attackmethods">
        <item>"TCP"</item>
        <item>"UDP"</item>
        <item>"HTTP"</item>
    </string-array>
    <color name="grey">#777777</color>
    <color name="darkgrey">#777777</color>
    <string name="action_settings">Blah</string>
    <string name="warning_text">LOIC is an advanced tool developed for the purpose of stress testing networks. Purposefully attacking private networks is illegal in some countries. The developer assumes no responsibility for the usage of this tool.Use LOIC responsibly.</string>
	<string name="warning_title">WARNING!</string>
	<string name="warning_showagain">Show this warning message again.</string>
	<string name="warning_accept">Accept.</string>
	<string name="attack_message_default">The cake is a lie.</string>
	<string name="attack_target">1. Select the target</string>
	<string name="attack_url">URL </string>
	<string name="attack_url_example">http://www.</string>
	<string name="attack_lockon">Lock On</string>
	<string name="attack_ip">IP </string>
	<string name="dot">.</string>
	<string name="attack_target_selected">Selected Target</string>
	<string name="attack_none">NONE</string>
	<string name="attack_options">Attack Options</string>
	<string name="attack_timeout">Timeout (ms)</string>
	<string name="attack_timeout_default">9001</string>
	<string name="attack_port">Port </string>
	<string name="attack_port_default">80</string>
	<string name="attack_message">Message </string>
	<string name="attack_method">Method </string>
	<string name="attack_threads">Threads </string>
	<string name="attack_threads_default">10</string>
	<string name="attack_ready">Ready?</string>
	<string name="attack_fire">FIRE</string>
	<string name="attack_elapsed_time">Elapsed Time: 0.000s</string>
	<string name="attack_hits">HITS: 0</string>
	<string name="attack_packets">Packets/sec: 0</string>
	<string name="attack_speed">Do you want it faster or slower?</string>
	<string name="warning_img_desc">Postal 2 Warning. A bit fitted to my needs, but you can recognize it.</string>
    
</resources>