<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:scrollbars="none" >

   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_url" />

            <EditText
                android:id="@+id/urlTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/attack_url_example" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/lockOnURLButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_lockon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_ip" />

            <EditText
                android:id="@+id/ip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot" />

            <EditText
                android:id="@+id/ip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot" />

            <EditText
                android:id="@+id/ip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot" />

            <EditText
                android:id="@+id/ip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <Button
                android:id="@+id/lockOnIpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_lockon" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="12dp"
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:gravity="center"
            android:text="@string/attack_target_selected"
            android:textColor="@color/text" />

        <TextView
            android:layout_marginBottom="12dp"
            android:id="@+id/selectedTargetTV"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="@color/foreground"
            android:gravity="center"
            android:text="@string/attack_none"
            android:textColor="@color/text"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_timeout" />

            <EditText
                android:id="@+id/timeoutET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/attack_timeout_default" >
            </EditText>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_port" />

            <EditText
                android:id="@+id/portET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/attack_port_default" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/attack_message" />

            <EditText
                android:id="@+id/messageET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/attack_message_default" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/attack_method" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </RadioGroup>

            <Spinner
                android:id="@+id/methodList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/attackmethods" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/attack_threads" />

            <EditText
                android:id="@+id/threadsET"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/attack_threads_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:gravity="center"
                android:text="@string/attack_speed"
                android:textColor="@color/text" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/speedTrackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <Button
            android:layout_marginTop="12dp"
            android:id="@+id/fireButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="fire"
            android:text="@string/attack_fire"
            android:textColor="@color/fire"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/statusTVtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/attack_elapsed_time"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/statusTV"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/foreground"
            android:gravity="center"
            android:text="@string/attack_hits"
            android:textColor="@color/text"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statusTVpackets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/attack_packets"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>