<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <ImageView
        android:contentDescription="@string/warning_img_desc"
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@drawable/splash" />

    <TextView
        android:id="@+id/continueTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:background="@color/background"
        android:gravity="center"
        android:text="@string/warning_accept"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/warningCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/continueTV"
        android:checked="true"
        android:text="@string/warning_showagain"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>